Add Recipe Page Links

--- a/index.html
+++ b/index.html
@@ -7,5 +7,11 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
+    <a href="recipes/chicken-stirfry.html">Chicken Stirfry</a>
+    <a href="recipes/garlic-porkchops.html">Garlic Porkchops</a>
+    <a href="recipes/onepot-spaghetti.html">Onepot Spaghetti</a>
+    <a href="recipes/parmesan-chicken-and-veggies.html">Parmesan Chicken And Veggies</a>
+    <a href="recipes/salisbury-steak.html">Salisbury Steak</a>
+    
 </body>
 </html>
