--- a/recipes/garlic-porkchops.html
+++ b/recipes/garlic-porkchops.html
@@ -7,5 +7,8 @@
 </head>
 <body>
     <h1>Garlic Porkchops</h1>
+    <img src="https://www.allrecipes.com/thmb/xfN1jknprdRSYvkQLtDoa8cfLBc=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/281629skillet-pepper-and-garlic-pork-chopsfabeveryday4x3-afb676a0ba5f4513a46ede0c4f5506d0.jpg" alt="Garlic Porkchops Image"> 
+
+
 </body>
 </html>
