--- a/recipes/onepot-spaghetti.html
+++ b/recipes/onepot-spaghetti.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <h1>One pot Spaghetti</h1>
+    <img src="https://www.allrecipes.com/thmb/KR60NX8ahsBVu8NCCPYrVrXZDnM=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/5925376-ab22323773054473b87f9fb7ec2f9fdc.jpg" alt="Onepot Spaghetti Image">
 </body>
 </html>
