--- a/recipes/chicken-stirfry.html
+++ b/recipes/chicken-stirfry.html
@@ -8,5 +8,8 @@
 <body>
     <h1>Chicken Stirfry</h1>
     <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fstatic.onecms.io%2Fwp-content%2Fuploads%2Fsites%2F43%2F2022%2F04%2F29%2F223382_chicken-stir-fry_Rita-1x1-1.jpg&q=60&c=sc&poi=auto&orient=true&h=512" alt="Chicken Stirfry Image">
+
+    <h2>Description</h2>
+    <p>This chicken stir-fry recipe is packed with veggies and is quick and easy to prepare. Try adding bean sprouts, bamboo shoots, snap peas, or any of your favorite vegetables. Serve it with white or brown rice, or noodles.</p>
 </body>
 </html>
