--- a/recipes/parmesan-chicken-and-veggies.html
+++ b/recipes/parmesan-chicken-and-veggies.html
@@ -11,5 +11,25 @@
     
     <h2>Description</h2>
     <p>This extra-crispy sheet pan chicken and veggies dinner is baked on one pan and packed with flavor!</p>
+
+    <h2>ingredients</h2>
+    <ul>
+        <li>1 tablespoon dried oregano</li>
+        <li>1 tablespoon dried parsley</li>
+        <li>1 teaspoon paprika</li>
+        <li>½ teaspoon garlic powder</li>
+        <li>¼ teaspoon seasoned salt, or to taste</li>
+        <li>½ pound fresh green beans, trimmed</li>
+        <li>1 small red potato, diced</li>
+        <li>1 sweet bell pepper, chopped</li>
+        <li>1 cup broccoli florets, chopped</li>
+        <li>1 tablespoon minced garlic</li>
+        <li>3 tablespoons olive oil</li>
+        <li>⅓ cup all-purpose flour</li>
+        <li>4 tablespoons butter, melted</li>
+        <li>1 cup panko bread crumbs</li>
+        <li>1 cup freshly grated Parmesan cheese, divided</li>
+        <li>1 ½ pounds skinless, boneless chicken breasts, pounded flat and excess fat removed</li>
+    </ul>
 </body>
 </html>
