--- a/recipes/chicken-stirfry.html
+++ b/recipes/chicken-stirfry.html
@@ -11,5 +11,24 @@
 
     <h2>Description</h2>
     <p>This chicken stir-fry recipe is packed with veggies and is quick and easy to prepare. Try adding bean sprouts, bamboo shoots, snap peas, or any of your favorite vegetables. Serve it with white or brown rice, or noodles.</p>
+
+    <h2>ingredients</h2>
+    <ul>
+        <li>4 cups water</li>
+        <li>2 cups white rice</li>
+        <li>⅔ cup soy sauce</li>
+        <li>¼ cup brown sugar</li>
+        <li>1 tablespoon cornstarch</li>
+        <li>1 tablespoon minced fresh ginger</li>
+        <li>1 tablespoon minced garlic</li>
+        <li>¼ teaspoon red pepper flakes</li>
+        <li>3 skinless, boneless chicken breast halves, thinly sliced</li>
+        <li>2 tablespoons sesame oil, divided</li>
+        <li>1 head broccoli, broken into florets</li>
+        <li>1 onion, cut into large chunks</li>
+        <li>1 cup sliced carrots</li>
+        <li>1 (8 ounce) can sliced water chestnuts, drained</li>
+        <li>1 green bell pepper, cut into matchsticks</li>
+    </ul>
 </body>
 </html>
