--- a/recipes/salisbury-steak.html
+++ b/recipes/salisbury-steak.html
@@ -11,5 +11,19 @@
 
     <h2>Description</h2>
     <p>This recipe for Salisbury steak uses good quality ground sirloin and tastes wonderful. You won't have to drain any grease from the patties once they've browned. Serve over mashed potatoes, egg noodles, or rice. Simply delightful!</p>
+
+    <h2>ingredients</h2>
+    <ul>
+        <li>1 pound ground sirloin</li>
+        <li>½ cup panko bread crumbs</li>
+        <li>1 egg, beaten</li>
+        <li>2 tablespoons milk</li>
+        <li>½ (1 ounce) package dry onion soup mix</li>
+        <li>1 teaspoon Worcestershire sauce</li>
+        <li>¼ teaspoon ground black pepper</li>
+    </ul>
+
+
+    
 </body>
 </html>
