Fix Ingredient Heading

--- a/recipes/parmesan-chicken-and-veggies.html
+++ b/recipes/parmesan-chicken-and-veggies.html
@@ -12,7 +12,7 @@
     <h2>Description</h2>
     <p>This extra-crispy sheet pan chicken and veggies dinner is baked on one pan and packed with flavor!</p>
 
-    <h2>ingredients</h2>
+    <h2>Ingredients</h2>
     <ul>
         <li>1 tablespoon dried oregano</li>
         <li>1 tablespoon dried parsley</li>
