--- a/recipes/garlic-porkchops.html
+++ b/recipes/garlic-porkchops.html
@@ -13,7 +13,7 @@
     <p>If you like garlic and love black pepper you'll love these skillet pork chops. Simple, yet, very tasty!</p>
 
 
-    <h2>ingredients</h2>
+    <h2>Ingredients</h2>
     <ul>
         <li>4 (1 1/2 inches thick) boneless center-cut pork chops</li>
         <li>4 tablespoons Worcestershire sauce</li>
@@ -21,6 +21,8 @@
         <li>2 cloves garlic, crushed</li>
         <li>2 tablespoons coarsely ground black pepper</li>
     </ul>
+
+
 
 </body>
 </html>
