--- a/recipes/onepot-spaghetti.html
+++ b/recipes/onepot-spaghetti.html
@@ -12,7 +12,7 @@
     <h2>Description</h2>
     <p>One-pot spaghetti puts Italian sausage, pasta sauce, and noodles together for a dish you can have on the table in less than 45 minutes. It doesn't get much easier than this by cooking everything in one pot. Switch it up by using ground beef, chicken, or turkey along with any other of your favorite ingredients, such as sliced mushrooms.</p>
 
-    <h2>ingredients</h2>
+    <h2>Ingredients</h2>
     <ul>
         <li>1 pound ground Italian sausage</li>
         <li>1 small white onion, diced</li>
