--- a/recipes/onepot-spaghetti.html
+++ b/recipes/onepot-spaghetti.html
@@ -1,16 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>One-pot Spaghetti</title>
 </head>
+
 <body>
     <h1>One pot Spaghetti</h1>
-    <img src="https://www.allrecipes.com/thmb/KR60NX8ahsBVu8NCCPYrVrXZDnM=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/5925376-ab22323773054473b87f9fb7ec2f9fdc.jpg" alt="Onepot Spaghetti Image">
+    <img src="https://www.allrecipes.com/thmb/KR60NX8ahsBVu8NCCPYrVrXZDnM=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/5925376-ab22323773054473b87f9fb7ec2f9fdc.jpg"
+        alt="Onepot Spaghetti Image">
 
     <h2>Description</h2>
-    <p>One-pot spaghetti puts Italian sausage, pasta sauce, and noodles together for a dish you can have on the table in less than 45 minutes. It doesn't get much easier than this by cooking everything in one pot. Switch it up by using ground beef, chicken, or turkey along with any other of your favorite ingredients, such as sliced mushrooms.</p>
+    <p>One-pot spaghetti puts Italian sausage, pasta sauce, and noodles together for a dish you can have on the table in
+        less than 45 minutes. It doesn't get much easier than this by cooking everything in one pot. Switch it up by
+        using ground beef, chicken, or turkey along with any other of your favorite ingredients, such as sliced
+        mushrooms.</p>
 
     <h2>Ingredients</h2>
     <ul>
@@ -23,5 +29,23 @@
         <li>1 (8 ounce) package spaghetti noodles, broken in half</li>
         <li>½ cup freshly grated Parmesan cheese for serving (Optional)</li>
     </ul>
+
+    <h2>Steps</h2>
+    <ol>
+        <li>
+            Combine ground sausage, onions, and garlic in a large pot or skillet with tall sides. Cook over medium heat
+            until sausage is cooked through, 5 to 8 minutes. Drain and discard grease.
+        </li>
+        <li>
+            Stir pasta sauce, water, and Italian seasoning into the pot; bring to a boil. Stir in spaghetti noodles,
+            return to a boil, and cook, stirring occasionally, until noodles are cooked through and sauce has thickened,
+            17 to 20 minutes.
+
+        </li>
+        <li>
+            Serve topped with grated Parmesan cheese.
+        </li>
+    </ol>
 </body>
+
 </html>
