--- a/recipes/parmesan-chicken-and-veggies.html
+++ b/recipes/parmesan-chicken-and-veggies.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Parmesan Chicken and Veggies</title>
 </head>
+
 <body>
     <h1>Parmesan Chicken and Veggies</h1>
-    <img src="https://www.allrecipes.com/thmb/QsYF2MjpFgD3TOzwcv4bRUqB23w=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/274966-sheet-pan-parmesan-chicken-and-veggies-ddmfs-4x3-0155-7cfcf4f7636b452bb8aea50cf1720d8b.jpg" alt="Parmesan Chicken and Veggies Image">
-    
+    <img src="https://www.allrecipes.com/thmb/QsYF2MjpFgD3TOzwcv4bRUqB23w=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/274966-sheet-pan-parmesan-chicken-and-veggies-ddmfs-4x3-0155-7cfcf4f7636b452bb8aea50cf1720d8b.jpg"
+        alt="Parmesan Chicken and Veggies Image">
+
     <h2>Description</h2>
     <p>This extra-crispy sheet pan chicken and veggies dinner is baked on one pan and packed with flavor!</p>
 
@@ -31,5 +34,32 @@
         <li>1 cup freshly grated Parmesan cheese, divided</li>
         <li>1 ½ pounds skinless, boneless chicken breasts, pounded flat and excess fat removed</li>
     </ul>
+    
+    <h2>Steps</h2>
+    <ol>
+        <li>Preheat the oven to 400 degrees F (200 degrees C). Line a sheet pan with parchment paper.</li>
+        <li>
+            Combine oregano, parsley, paprika, garlic powder, seasoned salt, and pepper in a small bowl.
+
+        </li>
+        <li>Place green beans, potato, bell pepper, broccoli, and garlic onto the prepared sheet pan. Drizzle with olive
+            oil and sprinkle with 1/2 of the seasoning mix; toss to coat.
+        </li>
+        <li>Place flour into a bowl. Place melted butter into a second bowl. Mix panko, 2/3 cup Parmesan cheese, and the
+            remaining seasoning mix together in a third bowl.
+        </li>
+        <li>Slice chicken into 1 1/4-inch strips, then coat in flour. Dredge floured strips in melted butter, dripping
+            excess butter back into the bowl. Press into Parmesan-panko mixture until heavily coated on both sides.</li>
+        <li>Push veggies to one half of the sheet pan. Place coated chicken strips onto the other side. Sprinkle any
+            remaining Parmesan-panko mixture over chicken, pressing to adhere.</li>
+        <li>Bake in the preheated oven for 10 minutes. Flip chicken strips and stir veggies, then continue to bake until
+            chicken juices run clear and veggies are crisp-tender, 10 to 15 more minutes. An instant-read thermometer
+            inserted into the center of the chicken should read at least 165 degrees F (74 degrees C).</li>
+        <li>Meanwhile, make the dipping sauce: Whisk mayonnaise, ketchup, garlic powder, and Worcestershire sauce
+            together in a small bowl.</li>
+        <li>Remove chicken and veggies from the oven. Toss veggies with remaining 1/3 cup Parmesan cheese. Serve with
+            dipping sauce.</li>
+    </ol>
 </body>
+
 </html>
