--- a/recipes/salisbury-steak.html
+++ b/recipes/salisbury-steak.html
@@ -1,16 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Salisbury Steak</title>
 </head>
+
 <body>
     <h1>Salisbury Steak</h1>
-    <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fstatic.onecms.io%2Fwp-content%2Fuploads%2Fsites%2F43%2F2022%2F04%2F29%2F223382_chicken-stir-fry_Rita-1x1-1.jpg&q=60&c=sc&poi=auto&orient=true&h=512" alt="Salisbury Steak Image ">
+    <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fstatic.onecms.io%2Fwp-content%2Fuploads%2Fsites%2F43%2F2022%2F04%2F29%2F223382_chicken-stir-fry_Rita-1x1-1.jpg&q=60&c=sc&poi=auto&orient=true&h=512"
+        alt="Salisbury Steak Image ">
 
     <h2>Description</h2>
-    <p>This recipe for Salisbury steak uses good quality ground sirloin and tastes wonderful. You won't have to drain any grease from the patties once they've browned. Serve over mashed potatoes, egg noodles, or rice. Simply delightful!</p>
+    <p>This recipe for Salisbury steak uses good quality ground sirloin and tastes wonderful. You won't have to drain
+        any grease from the patties once they've browned. Serve over mashed potatoes, egg noodles, or rice. Simply
+        delightful!</p>
 
     <h2>Ingredients</h2>
     <ul>
@@ -23,7 +28,25 @@
         <li>¼ teaspoon ground black pepper</li>
     </ul>
 
+    <h2>Steps</h2>
+    <ol>
+        <li>Gather the ingredients.</li>
+        <li>Make the patties: Mix ground sirloin, panko bread crumbs, egg, milk, 1/2 packet onion soup mix,
+            Worcestershire sauce, and black pepper together in a large bowl; shape into 5 patties.</li>
+        <li>Heat a skillet over medium heat. Cook patties in the hot skillet until browned, 3 to 5 minutes per side.
+        </li>
+        <li>Make the gravy: Melt butter in a separate skillet over medium-high heat. Sauté mushrooms and onion in melted
+            butter until tender, about 5 minutes. Stir flour and remaining 1/2 packet onion soup mix into mushroom
+            mixture until combined.</li>
+        <li>Gradually add beef stock and water, stirring continually, until simmering. Reduce heat to medium; cook,
+            stirring frequently, until gravy has thickened, about 4 to 5 minutes. Season with salt and pepper.
+
+        </li>
+        <li>Place browned patties into gravy; simmer until very tender, about 30 minutes. An instant-read thermometer
+            inserted into the center should read 160 degrees F (70 degrees C).</li>
+    </ol>
 
 
 </body>
+
 </html>
