--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <a href="recipes/parmesan-chicken-and-veggies.html">Parmesan Chicken And Veggies</a>
     <a href="recipes/salisbury-steak.html">Salisbury Steak</a>
     <a href="recipes/hamburger-stroganoff.html">Hamburger Stroganoff</a>
+    <a href="recipes/beef-udon-noodles.html">Beef Udon Noodles</a>
     
 </body>
 </html>
